# 01_improveDeath

./: CMakeLists.txt  main.cpp  note.md
shader/: cubevertex.glsl  lightfragment.glsl  lightvertex.glsl
src/: glad.c
